# cplay-ng

./: .gitignore  .travis.yml  AUTHORS  CHANGES.md  ChangeLog  ChangeLog.old  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  cnq  cplay  cplay.1  cplay.py  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: main.yml
.tx/: config
cplay/: cplay.py  remote_control.py
cplay/i18n/: cplay.pot
cplay/i18n/da/LC_MESSAGES/: cplay.po
cplay/i18n/de/LC_MESSAGES/: cplay.po
cplay/i18n/fr/LC_MESSAGES/: cplay.po
cplay/i18n/hu/LC_MESSAGES/: cplay.po
cplay/i18n/pl/LC_MESSAGES/: cplay.po
cplay/i18n/pt_BR/LC_MESSAGES/: cplay.po
i18n/da/LC_MESSAGES/: cplay.po
i18n/de/LC_MESSAGES/: cplay.po
i18n/fr/LC_MESSAGES/: cplay.po
i18n/hu/LC_MESSAGES/: cplay.po
i18n/pl/LC_MESSAGES/: cplay.po
i18n/pt_BR/LC_MESSAGES/: cplay.po
